--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,14 +1,101 @@
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {%if title %}
-            <title>Blog-{{title}}</title>
-        {%else%}
-            <title>Blog{{title}}</title>
-        {%endif%}
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+
+    <title>{% if title %}Blog - {{ title }}{% else %}📝Blog{% endif %}</title>
+</head>
+
 <body>
-    {% block content %}{% endblock %}
+    <!-- Navigation Bar -->
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow-sm py-3">
+            <div class="container">
+                <a class="navbar-brand font-weight-bold" href="{% url 'blog-home' %}">📝Blog</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+                    aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <!-- Left Links -->
+                    <div class="navbar-nav mr-auto">
+                        <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+                    </div>
+                    <!-- Right Links -->
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="#">Login</a>
+                        <a class="nav-item nav-link" href="#">Register</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main role="main" class="container py-5">
+        <div class="row">
+            <!-- Content Block -->
+            <div class="col-md-8 blog-main">
+                {% block content %}
+                {% endblock %}
+            </div>
+
+            <!-- Sidebar -->
+            <aside class="col-md-4 blog-sidebar">
+                <div class="p-4 mb-3 bg-light rounded border">
+                    <h4 class="font-italic">Sidebar</h4>
+                    <p class="mb-0 text-muted">You can put any information here you'd like.</p>
+                </div>
+
+                <div class="p-4">
+                    <h4 class="font-italic">Quick Links</h4>
+                    <ol class="list-unstyled mb-0">
+                        <li><a href="#">Latest Posts</a></li>
+                        <li><a href="#">Announcements</a></li>
+                        <li><a href="#">Calendars</a></li>
+                        <li><a href="#">Archives</a></li>
+                    </ol>
+                </div>
+            </aside>
+        </div>
+    </main>
+
+    <!-- Footer (optional) -->
+    <footer class="footer bg-dark text-white mt-5 py-3 shadow-sm">
+        <div class="container text-center small">
+            <span>© 2025 <strong>Blog</strong> • Built with ❤️ using
+                <a href="https://www.djangoproject.com/" class="text-light text-decoration-underline"
+                    target="_blank">Django</a>
+                &
+                <a href="https://getbootstrap.com/" class="text-light text-decoration-underline"
+                    target="_blank">Bootstrap</a>
+            </span>
+        </div>
+    </footer>
+
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9ScQZCv1ZT93hVbdtu1oNqF8Q2EeyFO8vHckT"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
