--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,9 +1,18 @@
 {% extends "blog/base.html" %}
 {%block content%}
-<h1>Blog Home!</h1>
-{% for post in posts%}
-    <h5>Title:{{post.title}}</h5>
-    <p>By-> {{post.author}} on {{post.date}}</p>
-    <p>Post->{{post.content}}</p>
-{%endfor%}
+{% for post in posts %}
+<div class="card mb-4 shadow-sm post-card">
+    <div class="card-body">
+        <h4 class="card-title text-primary">{{ post.title }}</h4>
+        <h6 class="card-subtitle mb-2 text-muted">
+            By <strong>{{ post.author }}</strong> on {{ post.date }}
+        </h6>
+        <hr>
+        <p class="card-text">{{ post.content }}</p>
+    </div>
+</div>
+{% empty %}
+<p class="text-muted">No posts available.</p>
+{% endfor %}
+
 {%endblock content%}
